[tool.poetry]
name = "iolanta-record"
version = "0.1.0"
description = ""
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "iolanta_record"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
iolanta = "^1.0.3"

[tool.poetry.group.dev.dependencies]
jeeves-yeti-pyproject = "^0.2.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
